add basic project with header and new styles

--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,8 @@
               "buildTarget": "RPGPlaceAngular:build:production"
             },
             "development": {
-              "buildTarget": "RPGPlaceAngular:build:development"
+              "buildTarget": "RPGPlaceAngular:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
