fix build prod erros

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "paths": {
+      "stompjs": [
+        "node_modules/stompjs/lib/stomp.js"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
