--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@stomp/stompjs": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.12",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,7 +43,6 @@
     "@angular/compiler-cli": "^20.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/sockjs-client": "^1.5.4",
-    "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
