--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,7 @@
 {
-      "builds": [
-        {
-          "src": "package.json",
-          "use": "@vercel/static-build",
-          "config": { "distDir": "dist/RPGPlaceAngular" }
-        }
-      ],
-      "routes": [
-        {
-          "src": "/assets/(.*)",
-          "dest": "/assets/$1"
-        },
-        {
-          "src": "/(.*)",
-          "dest": "/index.html"
-        }
-      ]
-    }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
+}
     
